# Kythera

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  10_pump_dump_detector.py  11_ai_mis_bot.py  12_ai_ats_bot.py  13_ai_rub_bot.py  14_ai_atb_bot.py  15_ai_master_bot.py  16_smc_forex_metals_bot.py  17_mayank_bot.py  18_ai_abr1_bot.py  19_whale_logger_bot.py  1_data_ingestion.py  20_funding_logger_bot.py  21_btc_smc_strategy.py  22_ip_pattern_bot.py  23_market_tracker.py  24_quasimodo_bot.py  25_smc_ml_sniper.py  26_regime_detector.py  27_bot_regime_analyzer.py  28_signal_orchestrator.py  29_ufi1_bot.py  2_indicator_engine.py  30_ai_pex1_bot.py  31_ai_fmr1_bot.py  32_ai_trm1_bot.py  33_ai_fif1_bot.py  34_ai_max1_bot.py  35_oi_collector.py  36_ai_lis1_bot.py  37_ai_tsm1_bot.py  38_ai_skw1_bot.py  39_ai_xsm1_bot.py  3_detectors.py  4_telegram_bot.py  5_trade_monitor.py  (+101 more)
audit_reports/: 01_core_infra.md  02_data_pipeline.md  03_telegram_monitors.md  04_orchestrator_regime.md  05_classic_strats.md  06_ai_bots_a.md  07_ai_bots_b.md  08_smc_bots.md  09_intelligence.md  10_dashboard_tools.md  11_ml_backtest.md  12_cross_cutting.md  13_x_ml_trainers.md  14_bot_performance_db.md  15_strategy_proposals.md  16_regime_orchestrator_analysis.md  16_strategy_concept_evaluation.md  17_monitor_replay_and_gaps.md  18_db_architecture_performance.md  19_batch_e_trainer_fixes.md  20_aim2_training_results.md  21_abr1_long_optimization.md  STEP2_DB_VERIFICATION.md
backtest/: backfill_regime_history.py  btc_ema_cross_results.txt  btc_optimization_results.txt  btc_rsi_optimization_results.txt  coins.json  mass_backtest_results.txt  smc_btc_backtest.py  smc_btc_backtest_v2.py  smc_btc_backtest_v3.py  smc_gold_backtest.py  smc_gold_backtest_v2.py  test_abr1_detection.py  test_aim2_event_source_symmetry.py  test_aim2_topn.py  test_aim_context_features.py  test_analytics_export.py  test_analytics_export_publish.py  test_analytics_query_parity.py  test_atb1_posted_flag.py  test_atb2_deploy.py  test_atb2_features.py  test_atb_unknown_state.py  test_atomic_write_json.py  test_ats_features.py  test_bot_catalog.py  test_bot_naming.py  test_bot_regime_analyzer.py  test_bot_variant_archive.py  test_bot_variant_compare.py  test_bot_variant_index.py  test_btc_smc_cooldown.py  test_candle_window_start.py  test_candles.py  test_candles_backfill.py  test_candles_db_parity.py  test_candles_schema.py  test_chart_service_watchdog.py  test_coin_refresh.py  test_coins_writer.py  test_cooldown_tags.py  (+96 more)
core/: __init__.py  aim2_features.py  aim2_topn.py  atb2_features.py  ats_features.py  bot_catalog.py  bot_naming.py  bot_utils.py  breadth_features.py  candles.py  candles_schema.py  charting.py  coins.py  config.py  database.py  fleet.py  funding_features.py  health_monitor.py  http_retry.py  live_price.py  logging_setup.py  market_utils.py  max1_gate.py  mis_features.py  model_artifacts.py  moment_features.py  oi_5m.py  prob_floor.py  process_control.py  realized_pnl.py  regime_logic.py  research_features.py  rub_features.py  shadow_gate.py  signal_post.py  sra_features.py  state_utils.py  ticker_10s.py  time.py  trade_utils.py  (+3 more)
docs/: AIM2_DESIGN.md  ARCHITECTURE.md  ATB2_REBUILD.md  CANDLE_CALL_SITES.md  HYPERLIQUID_REPLICATION_EVAL.md  KELLY_SIZING_SPEC.md  MM_ORDER_LIFECYCLE_SPEC.md  MODEL_CANDIDATES_SPEC_2026-07.md  MODEL_INTENT.md  NEW_IDEAS_BOTS.md  OPUS-HANDOFF.md  REGIME_CONDITIONED_GATING_EVAL.md  REGIME_ORCHESTRATOR.md  SHADOW_MODE_POSTING.md  STAGING_VERIFICATION.md  T-2026-CU-9050-021-opus-task-audit.md  T-2026-CU-9050-131-SPEC.md  T-2026-CU-9050-139-SPEC.md  T-2026-KYT-9050-037-fleet-reconfig-spec.md  T-2026-KYT-9050-038-bot-variant-index-archive-spec.md  TIMESCALE_R1_MIGRATION.md  UTC_POLICY.md  WATCHDOG_SELFHEAL.md  WF_SIGNIFICANCE.md  WHITELIST_V2_FLIP_EVAL.md  bot_variants_index.md  schema.sql
handlers/: open_handler.py
legacy_trainers/: BT1-Backtest-Trendline.py  BT1-Datagrepper-for-ml.py  BT1-ML-Trainer.py  BT1-ML-Trainer_Optimized.py  BT1-Thresholdoptimizing.py  BT1-Thresholdoptimizing_V2.py  BT2-Backtest-Breakandretest.py  BT2-Datagrepper-for-ML.py  BT2-ML-Final_Saver.py  BT2-ML-Trainer.py  BT2-Strategybacktester.py  BT2-Strategybacktester_v2.py  BT3-1-datagrepperandbacktest.py  BT3-2-ml_trainer.py  BT3-3-optimizer.py  README.md  X5-analyze_indicators-SICH.py  X8-TSI-ML-V3.py  (+16 more)
(+340 files in other folders)
